feat: criado residuedto e supervisordto, corrigido metodos de cadastro de supervisors, corrigido metodos do supervisor mapper e residue mapper.